# openwrt_pkgs

face_rec/: Makefile
face_rec/files/lib/face/models/: feature.db  feature.db.bak
face_rec/src/: CMakeLists.txt  facerecognition.cpp  facerecognition.h  featuredb.cpp  featuredb.h  genfeature.cpp  main.cpp  mobilefacenet.cpp  mobilefacenet.h  mtcnn.cpp  mtcnn.h
ncnn/: Makefile
ncnn/src/: CMakeLists.txt  mat_pixel.cpp
opencv/: Makefile
opencv/patches/: 01-fix_compile_dir_error.patch  02-fix-ffmpeg-check.path
